[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/entities/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/coin/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Game.gd" type="Script" id=4]
[ext_resource path="res://src/ui/hud/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 436, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 308 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 436, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 308 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
margin_right = 904.0
margin_bottom = 648.0

[node name="Coin" parent="." instance=ExtResource( 3 )]
position = Vector2( 832, 336 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 77, 323 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 454, 323 )

[node name="EnemyWait" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Wall1" type="StaticBody2D" parent="."]
position = Vector2( 8, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2( 428, 0 )
shape = SubResource( 1 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 880, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 0, 316 )
shape = SubResource( 2 )

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2( -16, 624 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
position = Vector2( 452, 0 )
shape = SubResource( 3 )

[node name="Wall4" type="StaticBody2D" parent="."]
position = Vector2( -8, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
position = Vector2( 0, 300 )
shape = SubResource( 4 )

[connection signal="collected" from="Coin" to="." method="_on_Coin_collected"]
[connection signal="score_reached" from="Player" to="." method="_on_Player_score_reached"]
[connection signal="game_over" from="Enemy" to="." method="_on_game_over"]
[connection signal="timeout" from="EnemyWait" to="." method="_on_EnemyWait_timeout"]
